06/14/2020
- Fixed a word wrap error when a colorcode appeared right before the wrap length
- Finished the PageHandler and set it up to display the login message (usually motd)
- Changed Entity getContainedByName to attempt to use altnames
- Added the Physical class as a subclass to Entity and moved all Physical mud objects under it
- Added equip and remove functions
- Added the put function and redid get to handle containers
- Added functionality for rope doors that "open" when you tie a rope to them
- Changed a number of _desc attributes to _examine
- Added parsing for Target2 and modified flags to handle Target1 and Target2 flags
- Added some extra flags (without code support yet)
- Added some additional specials functions
- Added the OnlySpecials flag to doors so they don't work without specials

6/12/2020
- Added the ScriptEngine class to manage scripting/specials
- Integrated Python script embedding to the MUD engine
- Added the IEntity and IMUD classes to interface with the broader mud and Entity objects from scripts
- Implemented the preaction and postaction triggers for specials

6/10/2020
- Added additional flags to Static, Getable and Equipment to support a MUD test zone - no functionality yet
- Added masks to traits so they can set up a character when applied - not tested yet
- Fixed an issue with listContained that was breaking polymorphism and not showing items in inventory
- Modifed functions getContained to getContainedByPtr, getContainedByID, getContainedByName for clarity of function

6/07/2020
- Created the Trait entity and had them loaded in EntityDB
- Added traits to Organisms with load capability for NPCs
- Made initial wrap_width for screen text a config setting
- Made player save record reviewmsg, attributes, traits and wrap_width
- Added the stats/score command so attributes and traits could be viewed
- Added player creation demo menus for traits: gender, race, class

5/25/2020
- Created the Door class as a child of Static