@@ -27,7 +27,7 @@ network:
 gameplay:
 {
 	# New players start here:
-	startloc = "castle:rm_chamber";
+	startloc = "castle:rm_s_hall";
 
 }
 
