@@ -1,3 +1,8 @@
+06/16/2020
+- Fixed Python integration that caused a crash when a script exception happened
+- Added login menu framework
+- Added more flags
+
 06/14/2020
 - Fixed a word wrap error when a colorcode appeared right before the wrap length
 - Finished the PageHandler and set it up to display the login message (usually motd)
